--- a/.github/workflows/create-asana-task-on-pr.yml
+++ b/.github/workflows/create-asana-task-on-pr.yml
@@ -12,11 +12,12 @@ jobs:
         uses: asana/github-action@v1
         with:
           # must match your GitHub secret
-          personal-access-token: ${{ secrets.ASANA_TOKEN }}
+          personal-access-token: ${{ secrets.TEST_ASANA_PR }}
 
           # from step 2
           workspace-id: '123456789012345'
           project-id:   '987654321098765'
+          assignee-id: '1204646733913360'
 
           # optional: assign to someone in Asana
           # assignee-id: '1122334455667788'
