--- a/.github/workflows/create-asana-task-on-pr.yml
+++ b/.github/workflows/create-asana-task-on-pr.yml
@@ -45,13 +45,13 @@ jobs:
     - name: Create Asana Task
       run: |
         curl -X POST https://app.asana.com/api/1.0/tasks \
-          -H "Authorization: Bearer ${{ secrets.ASANA_ACCESS_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.TEST_ASANA_PR }}" \
           -H "Content-Type: application/json" \
           -d '{
             "data": {
               "name": "Review PR: ${{ github.event.pull_request.title }}",
               "notes": "Pull Request: ${{ github.event.pull_request.html_url }}\nAuthor: ${{ github.event.pull_request.user.login }}\nBranch: ${{ github.event.pull_request.head.ref }} → ${{ github.event.pull_request.base.ref }}\n\nDescription:\n${{ github.event.pull_request.body }}",
-              "projects": ["${{ secrets.ASANA_PROJECT_GID }}"],
+              "projects": ["1210376775330692"],
               "due_on": "${{ github.event.pull_request.created_at | date('Y-m-d') }}"
             }
           }'
